# Calculator

./: .gitignore  CMakeLists.txt  README.md  alloper.cpp  alloper.h  calc.cpp  calc.h  calc_ver2.sln  calc_ver2.vcxproj  calc_ver2.vcxproj.filters  command.h  main.cpp  minus.h  mult.h  parser.cpp  parser.h  plus.h
calc/: calc.cpp  div.h  main.cpp  minus.h  parser.h  unary_minus.h
cos/: cos.cpp  cos.h  cos.vcxproj  cos.vcxproj.filters
pow/: pow.cpp  pow.h  pow.sln  pow.vcxproj  pow.vcxproj.filters
sin/: sin.cpp  sin.h  sin.vcxproj  sin.vcxproj.filters
